Исправил всё недочёты
